<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <include layout="@layout/toolbar_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_cash_bank"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_withdraw_cash_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/t999999"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_account"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_bank_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_bank_account"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/t999999"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_binding_person"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_bank_binding_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_bank_binding_person"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/t999999"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_cash_num"
            android:textColor="@color/t999999"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_cash_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/cash_unit"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_withdraw_cash_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_cash_unit"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:paddingBottom="8dp"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:visibility="gone"
                android:src="@mipmap/ic_clear" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_usable_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usable_cash"
                android:textColor="@color/t999999"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_all_withdraw_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/all_withdraw_cash"
                android:textColor="@color/blue"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_sure_withdraw_cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/gray_light_shape"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/withdraw_cash_time"
        android:textColor="@color/gary"
        android:textSize="14sp" />
</LinearLayout>